# word2vec

./: .gitignore  Cargo.toml  README.md  VISUALIZATION_GUIDE.md  build.rs  development_process.md  flake.nix  og.c  word2vec.py
benches/: long_bench.rs  w2v.rs  w2v_bench.rs
scripts/: parse_loss_logs.py  results.py  validate.py  visualize_word2vec.py
src/: algo.rs  cores.rs  lib.rs  main.rs  model.rs
tests/: w2v.rs
