[package]
name = "word2vec"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ndarray = { version ="0.15.6", features = ["blas"] }
ndarray-linalg = "0.16.0"
ndarray-rand = "0.14.0"
rand = "0.8.5"
rand_distr = "0.4.3"

regex = "1.11.1"

serde = { version = "1.0.213", features = ["derive"] }
stop-words = "0.8.0"
serde_json = "1.0.132"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
pprof = { version = "0.11.0", features = [
    "flamegraph",
    "criterion",
]}

[profile.release]
debug = true

[[bench]]
name = "w2v"
harness = false
