[package]
name = "word2vec"
version = "0.1.0"
edition = "2021"

[dependencies]
#ndarray = "0.16.1"

rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.11.1"

serde = { version = "1.0.213", features = ["derive"] }
stop-words = "0.8.0"
serde_json = "1.0.132"
clap = { version = "4.5.41", features = ["derive"] }
bincode = "1.3.3"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
pprof = { version = "0.11.0", features = [
    "flamegraph",
    "criterion",
]}

[profile.release]
debug = true

[[bench]]
name = "w2v_bench"
harness = false
